...
        switch self {
        case .stringInstruments:
            return "弦樂器"
        case .woodwindBrass:
            return "管樂器"
        case .keyboard:
            return "鍵盤樂器"
        case .pluckedStrings:
            return "撥弦樂器"
        case .percussion:
            return "打擊樂器"
        case .vocal:
            return "聲樂"
...
